TW-25511103: resolve shadow overflow issues; pagination styling

--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -2208,6 +2208,11 @@ input[type="radio"]:focus:not(:checked).custom,
   padding-bottom: 2rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
